--- a/reports/lab_book/lab_book.tex
+++ b/reports/lab_book/lab_book.tex
@@ -659,28 +659,33 @@ haploids, sequencing errors, errors in linkage map...). One of the more likely r
 some individuals are produced by terminal fusion automixis, rather than central fusion, which would cause
 them to be homozygous at the centromere and affect the whole model.\\
 
-A way to test this, which has already been used in Daphnia (Svendsen et al, 2015), is to model the heterozygosity relative to the mother of each offspring as a function of the distance from the centromere.
+A way to test this, which has already been used in Daphnia (Svendsen et al, 2015), is to model the heterozygosity relative to the mother of each offspring as a function of the distance from the centromere. All chromosomes are pulled together. Note the Svendsen uses centimorgans and I use physical distance in basepair.
 
-I visualize it in two ways; first using a sliding window moving away from the centromere in absolute distance (Figure \ref{proto_slide_fusion}). Each sliding window computes the proportion of heterozygous sites in each individual. Second, choosing different sizes for the putative centromeric region and computing the proportion of heterozygous with both (Figure \ref{proto_surround_fusion}). Under central fusion, one would expect the heterozyosity to decrease when the window moves away from the centromere, or when the putative region is enlarged. On the other hand, under terminal fusion, the value should increase when moving away or increasing the size of the centromeric region. This should allow me to single out the individuals - if any - produced by terminal fusion.
+I visualise it in two ways:\\
+First, using a sliding window moving away from the centromere in absolute distance (Figure \ref{proto_slide_fusion}). Each sliding window computes the proportion of heterozygous sites in each individual. \\
+Second, choosing different sizes for the putative centromeric region and computing the proportion of heterozygous with each value (Figure \ref{proto_surround_fusion}). Under central fusion, one would expect the heterozyosity to decrease when the window moves away from the centromere, or when the putative region is enlarged. On the other hand, under terminal fusion, the value should increase when moving away or increasing the size of the centromeric region.
 
 \begin{figure}[h]
 	\begin{center}
-		\includegraphics[width=1.1\textwidth]{Num_CSD_loci/proto_centroD_term_central_usion.pdf}
-		\caption{Modeling the proportion of heterozygosity as a function of the distance from the centromere in each individual separately. The curves are obtained by local regression (loess).}
+		\includegraphics[width=1.1\textwidth]{Num_CSD_loci/pooled_chr_centro_dist_win30.pdf}
+		\caption{Modeling the proportion of heterozygosity as a function of the distance from the centromere in each individual separately. Proportions are calculated in sliding windows, each containing 30 SNPs and the base pair at the middle of the window is used for plotting. The curves are obtained by local regression (loess). All chromosomes are pulled together in a single figure}
 		\label{proto_slide_fusion}
 	\end{center}
 \end{figure}
 
 \begin{figure}[h]
 	\begin{center}
-		\includegraphics[width=1.1\textwidth]{Num_CSD_loci/lm_centrosize_100k_vs_3M.pdf}
-		\caption{Comparing the proportion of heterozygous sites relative to mother in region of +/- 100kb versus +/- 3Mb around centromere in each individual. Panes represent the different chromosomes and individuals are colored by family. The lines are obtained by linear a simple linear model.}
+		\includegraphics[width=1.1\textwidth]{Num_CSD_loci/pooled_chrom_centrosize_50k_5M.pdf}
+		\caption{Measuring the proportion of heterozygous sites relative to mother in regions of variying size between +/- 50kb and +/- 5Mb around centromere in each individual. Panes represent families (only 5 largest ones included) and chromosomes are pooled together. The curves are obtained using a local regression (loess).}
 		\label{proto_surround_fusion}
 	\end{center}
 \end{figure}
 
-Given the density of SNPs in my data, these methods cannot be used to reliably identify central or terminal fusion. To optimize the density of information, I will try pooling chromosomes together after transforming basepairs coordinates into distance from centromere.
-Note: tried this; I don't think I can pull anything useful from this either, data is too noisy. 
+Given the density of SNPs in my data, these methods cannot be used to reliably identify central or terminal fusion. There is also the possibility that some scaffolds are inverted in the linkage map, which would strongly affect the results.\\
+
+tl;dr : I don't think I can pull anything useful from this, data is too noisy. 
+
+
 
 \FloatBarrier
 
