--- a/reports/thesis/Report.tex
+++ b/reports/thesis/Report.tex
@@ -82,19 +82,32 @@ Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor i
 \section*{Materials and methods}
 
 \subsection*{Crossing experiments}
-A haploid male coming from an asexual family was crossed with an inbred sexual line. The offspring of asexual females at the Nth generation were used.
+\textit{Performed prior to master project.}\\
+A haploid male coming from an asexual family of \textit{Lysiphlebus fabarum} was crossed with an inbred sexual line. The offspring of asexual females at the 4th generation were used.
 
 \subsection*{RAD-seq protocol}
-N samples of \textit{Lysiphlebus fabarum } coming from X different asexual females kept in ethanol at -XX\degree C for XX months. They were sexed visually and prepared in 6 separate libraries, all following the same protocol from XXX. ddRAD-seq was performed using EcorI and MseI restriction enzymes and a fragments  of 200-450 bp were size selected on agarose gel. Single-end sequencing was performed using Illumina Miseq (or Hiseq 2500???). Samples were multiplexed in each library following the TruSeq multiplexing design and libraries were pooled pairwise on the same Illumina lane using different adapters (iA06 or iA12).
+\textit{Performed prior to master project.}\\
+N samples of 4th generation \textit{Lysiphlebus fabarum } coming from X different asexual females kept in ethanol at -XX\degree C for XX months. They were sexed visually and prepared in 6 separate libraries, all following the same protocol from XXX. ddRAD-seq was performed on all samples using EcorI and MseI restriction enzymes and a fragments  of 200-450 bp were size selected on agarose gel. Single-end sequencing was performed using Illumina Miseq (or Hiseq 2500???). Samples were multiplexed in each library following the TruSeq multiplexing design and libraries were pooled pairwise on the same Illumina lane using different adapters (iA06 or iA12).
 
 \subsection*{STACKS pipeline}
-The raw reads were trimmed and demultiplexed using the "process radtags" module from the STACKS suite and two mismatches were allowed to detect adapters. The 96bp demultiplexed reads were mapped to the latest assembly of the \textit{L. fabarum} genome using BWA aln with 4 mismatches allowed. Stacks were generated from SAM files using the pstacks module with a minimum stack depth (-m) of 3. The catalogue of loci was built with cstacks allowing for a distance (-n) of 3 mismatches between samples at each locus. Individuals with less than 10\% radtags compared to the average across all samples. Populations was run pooling all samples together, requiring each locus to be present (-r) in at least 80\% of samples. The different parameters were selected following guidelines in \textbf{Paris et al. 2017}.
+We use the STACKS software (version 1.30) \textbf{CITATION} to process RAD-seq data as it is versatile, lends itself well to the analysis of non-model species and is well documented.
+Following quality control using fastqc (version 0.11), the raw reads were trimmed and demultiplexed using the "process radtags" module from the STACKS suite and two mismatches were allowed to detect adapters. The 96bp demultiplexed reads were mapped to the latest assembly of the \textit{L. fabarum} genome using BWA aln (version 0.7.2) with 4 mismatches allowed. Only uniquely mapped alignments were extracted using samtools (version 1.3). Stacks were generated from SAM files of unique hits using the Pstacks module, requiring a minimum stack depth (-m) of 3. The catalogue of loci was built with Cstacks allowing for a distance (-n) of 3 mismatches between samples at each locus. Individuals with less than 10\% total radtags compared to the average across all samples were excluded from the analysis. Populations was run pooling all samples together, requiring each locus to be present (-r) in at least 80\% of samples. The different STACKS parameters were selected following guidelines in \textbf{Paris et al. 2017}.
 
 \subsection*{Ploidy separation}
-Genome wide heteroyzgosity per individual was computed on all variant sites using the output VCF file from a separate populations run. Only high confidence loci were included by requiring a minimum sequencing depth (-m) of 20 reads in populations. A conservative threshold of 77\% heterozygous sites was determined empirically and individuals above that threshold were considered haploid and excluded.
+Genome wide heteroyzgosity per individual was computed on all variant sites using the output VCF file from a first populations run with more stringent parameters. Only high confidence loci were included by requiring a minimum sequencing depth (-m) of 20 reads in populations, to minimize chances of assigning the wrong ploidy to any individual. A conservative threshold of 77\% heterozygosity among variant sites was determined empirically \textbf{(Figure SX)} and individuals above that threshold were considered haploid and excluded from the main populations run used the other analyses.
 
 \subsection*{Categorizing families}
-The proportion of males among diploid offspring was used to group families by number of heterozygous CSD loci in the mother. The total number of diploid males was inferred from sequenced individuals by extrapolating the rate of haploidy from sequenced individuals to the total number of males. The proportion of males among diploid offspring was then computed using the inferred number of diploid males. The families were classified using 1-dimensional k-means clustering on the proportion of males among diploid offspring and 2 scenarios were considered to decide the number of categories; either 2 CSD loci, resulting in 3 categories (k=3), or 3 CSD loci resulting in 7 categories (k=7).
+The proportion of males among diploid offspring was used to group families by number of heterozygous CSD loci in the mother. The total number of diploid males among non-sequenced individuals was inferred from sequenced individuals by extrapolating the rate of haploidy from sequenced individuals to the total number of males as follows:
+\begin{center}
+$N_{DM}=N_M*\frac{n_{dm}}{n_{dm}+n_{hm}}$\\
+\end{center}
+Where upper-case letters represent total individuals count in each family and lower-case letters represent sequenced individuals count in the family. $N_M$ is the number of males, $N_{HM}$ is the number of haploid males and $N_{DM}$ the number of diploid males.
+
+The proportion of males among diploid offspring was then computed using the inferred number of diploid males. The families were classified using 1-dimensional k-means clustering on the proportion of males among diploid offspring and 2 scenarios were considered to decide the number of categories of families; either 2 CSD loci, resulting in 3 categories (k=3), or 3 CSD loci resulting in 7 categories (k=7).\\
+
+\subsection{Finding centromeres}
+
+\subsection{Terminal or Central fusion automixis}
 
 \subsection*{Association mapping}
 Case-control association mapping was carried separately in each category of family. The number of heterozygous males, heterozygous females, homozygous males and homozygous females was computed for every SNP and a two-sided Fisher exact-test was performed on the 2X2 contingency tables. P-values were corrected for multiple-testing using Benjamini-Hochberg correction. 
