wrote script to remove loci that are heterozygous in haploid individuals

--- a/reports/lab_book/lab_book.tex
+++ b/reports/lab_book/lab_book.tex
@@ -1061,6 +1061,9 @@ After removing all samples from library 10, I performed the downstream analyses 
 \FloatBarrier
 \chapter{TO DO}
 \begin{itemize}
+\item remove max het threshold and instead exclude loci that are heterozygous in haploids from diploids
+\item get centimorgans coordinates from bp using linkage map and place centrosomes.
+\item look at the proportion of recombination for different GWAS hits: does it match the mode (assuming single mode) in the prop males among 2n offspring plot.
 \item compute prop.het loci in centromeric window for all individuals and isolate TFA based on distribution if bimodal.
 \item try above with different values for window sizes and select based on number of loci contained in window.
 \item Compute coverage along genome for all loci including monomorphic ones.
