blacklisting loci supports pooled and per-family populations run

--- a/reports/thesis/Report.tex
+++ b/reports/thesis/Report.tex
@@ -62,8 +62,8 @@
 Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
 
 \section*{Introduction}
-Sexual reproduction is abundant in nature despite the many costs associated with sex, such as the time and energy spent into mate finding and copulation or the risk of disease transmission. This apparent paradox has suscited the interest of biologists for decades and is still a major topic in evolutionary biology. To understand how the benefits of sex can make up for its costs, it is necessary to understand not only the ecology and population dynamics associated with sexual reproduction, but also the underlying genetics that lead to the formation of individuals with different sexes. These genetics mechanisms can have major genome-wide consequences and strong evolutionary implications. A variety of sex determination systems have been identified, they can be either environmental, genetic or a combination of both. To better understand why the strategies to generate different sexes are so diverse and widespread, it is interesting to study when sex is lost. There are indeed asexual species and even species containing both sexual and asexual lineages. Such cases are frequent in Hymenoptera, a megadiverse order comprising 230,000 described species with many different sex determination mechanisms. Among those mechanisms, haplodiploidy is by far the most common. In haplodiploid species, females lay eggs which develop into haploid males if left unfertilized, and into diploid females if fertilized by male sperm. 
-Although haploidy is a well described phenomenon, the genetics underlying the detection of haplodiploidy by the embryo are still very little studied. A particular mechanism named complementary sex determination (CSD) has been described and is known to occur in more than 60 hymenopteran species. In CSD species, sex is determined by only one or a few loci. If two different alleles are present in the organism for at least one CSD locus, the organism develops into a female. Haploid eggs therefore develop into males as they are hemizygous for all loci. In wild populations, on the other hand, there is usually a large allelic diversity at CSD, which usually result in heterozygous CSD loci triggering female development. However, when populations are artificially inbred in laboratory strains, the low allelic diversity will eventually result in diploid individuals with all CSD loci homozygous. Such individuals will develop into abnormal diploid males, which, depending on the species, are not viable, sterile or have reduced fitness. The presence of such diploid males is typically how the presence of CSD is inferred in a species and the frequency of these males has been used in breeding experiments to determine the number of CSD loci in a species from mathematical models.
+Sexual reproduction is abundant in nature despite the many costs associated with sex, such as the time and energy spent into mate finding and copulation or the risk of disease transmission. This apparent paradox has suscited the interest of biologists for decades and is still a major topic in evolutionary biology. To understand how the benefits of sex can make up for its costs, it is necessary to understand not only the ecology and population dynamics associated with sexual reproduction, but also the underlying genetics that lead to the formation of individuals with different sexes. These genetics mechanisms can have major genome-wide consequences and strong evolutionary implications. A variety of sex determination systems have been identified, they can be either environmental, genetic or a combination of both. To better understand why the strategies to generate different sexes are so diverse and widespread, it is interesting to study when sex is lost. There are indeed asexual species and even species containing both sexual and asexual lineages. Such cases are frequent in Hymenoptera, a megadiverse order comprising 230,000 described species with many different sex determination mechanisms. Among those mechanisms, haplodiploidy is by far the most common. In haplodiploid species, females lay eggs which develop into haploid males if left unfertilized, and into diploid females if fertilized by male sperm. \\
+Although haploidy is a well described phenomenon, the genetics underlying the detection of haplodiploidy by the embryo are still very little studied. A particular mechanism named complementary sex determination (CSD) has been described and is known to occur in more than 60 hymenopteran species. In CSD species, sex is determined by only one or a few loci. If two different alleles are present in the organism for at least one CSD locus, the organism develops into a female. Haploid eggs therefore develop into males as they are hemizygous for all loci. In wild populations, on the other hand, there is usually a large allelic diversity at CSD, which usually result in heterozygous CSD loci triggering female development. However, when populations are artificially inbred in laboratory strains, the low allelic diversity will eventually result in diploid individuals with all CSD loci homozygous. Such individuals will develop into abnormal diploid males, which, depending on the species, are not viable, sterile or have reduced fitness. The presence of such diploid males is typically how the presence of CSD is inferred in a species and the frequency of these males has been used in breeding experiments to determine the number of CSD loci in a species from mathematical models.\\
 \textit{Lysiphlebus fabarum} is a haplodiploid parasitoid wasp with reproductive polymorphism (both sexual and asexual lineages) where CSD is known to be the mechanism underlying sex determination. As it has both reproductive polymorphism and a simple sex determination system, it has great potential as a model species for the study of questions relating to sex determination and the evolutionary maintenance of sex. In this study, we investigate the genetic basis of CSD in this species. The genetics of CSD is only known in the cape honeybee (\textit{Apis mellifera capensis}) where the \textit{csd} gene was identified to stem from a duplication of the ancestral \textit{fem}. The \textit{csd} gene underwent strong positive selection which resulted in neo functionarlization and it now acts as an RNA splicer of its paralog, \textit{fem}
 
 
