removed old variable for haplo threshold

--- a/reports/lab_book/lab_book.tex
+++ b/reports/lab_book/lab_book.tex
@@ -1081,7 +1081,13 @@ I separated individuals from cross D from those in C or R and ran them separatel
 
 \subsection{Cross D}
 
-This cross contains 186 individuals, of which 174 made it through the pipeline. They are split into 15 families. Mean number of sites per sample: 864, Average locus depth per sample: 108
+This cross contains 186 individuals, of which 174 made it through the pipeline. They are split into 15 families. 
+
+\begin{itemize}
+\item Mean number of sites per sample: 864
+\item Average locus depth per sample: 108
+\item Ploidy count: diploids, haploids
+\end{itemize}
 
 \begin{figure}
 \begin{center}
@@ -1092,7 +1098,12 @@ This cross contains 186 individuals, of which 174 made it through the pipeline. 
 \end{figure}
 
 \subsection{Cross C}
-
+This cross contains 588 individuals, of which 530 made it through the pipeline. They are split into 45 families. 
+\begin{itemize}
+\item Mean number of sites per sample: 1439
+\item Average locus depth per sample: 127.
+\item Ploidy counts: 314 diploids, 216 haploids
+\end{itemize}
 \section{CSD}
 
 After removing all samples from library 10, I performed the downstream analyses to find CSD again.
